This is the index for the DEV branch.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://pythonSite/test.py/" />
+<h1>Hello, World! I am running out of the DEV branch.</h1>
